# budget-v2

./: .dockerignore  .gitignore  CLAUDE.md  CODEBASE_CRITIQUE.md  GEMINI.md  README.md  backend_rule_violations_report.md  backlog_sso_visuals.md  check_overlap.py  debug_check_sample.py  debug_third_parse.py  debug_upload_logic.py  docker-compose.yml  frontend_rule_violations_report.md  generate_multisheet_sample.py  generate_second_budget.py  generate_third_budget.py  sample_budget.xlsx  second_sample_budget.xlsx  third_sample_budget.xlsx
backend/: Dockerfile  README.md  alembic.ini  budget_graph.gml  pyproject.toml
backend/chrome_db/: chroma.sqlite3
backend/migrations/: env.py
backend/migrations/versions/: 425527d25b72_add_expense_type_to_budgetmodel.py  6f63c4372b27_enterprise_schema.py  f61915e41e0d_add_settings_column.py
backend/src/: main.py
backend/src/application/: ai_chat_service.py  analysis_services.py  analyze_budget.py  audit_service.py  auth_service.py  cleanup_service.py  context.py  dtos.py  manage_rules.py  ports.py  query_budget.py  simulate_budget.py  sso_service.py  upload_budget.py
backend/src/domain/: analysis_models.py  audit.py  auth.py  budget.py  repository.py  rule.py  session.py  tenant.py  user.py
backend/src/infrastructure/: base_repository.py  db.py  excel_parser.py  models.py  repository.py
backend/src/interface/: ai_chat_router.py  auth_router.py  dependencies.py  envelope.py  (+7 more)
backend/tests/: conftest.py  test_cleanup.py  test_forecasting.py  test_guest_auth.py  test_multisheet_upload.py  test_security.py  test_settings.py
(+150 files in other folders)
