[project]
name = "budget-dashboard-backend"
version = "0.1.1"
description = "Backend for Budget Dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.123.8",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.5",
    "structlog==25.5.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.44",
    "aiosqlite==0.20.0",
    "python-jose[cryptography]==3.3.0",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "email-validator>=2.0.0",
    "bcrypt==4.1.2",
    "slowapi==0.1.9",
    "authlib==1.3.0",
    "httpx==0.27.0",
    "google-generativeai==0.8.3"
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "httpx==0.26.0",
    "mypy==1.8.0",
    "black==24.1.1",
    "isort==5.13.2"
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.isort]
profile = "black"
